[package]
name = "evokit"
version = "0.1.19"
authors = ["Andrew Stanton <astanton@etsy.com>", "Akhila Ananthram <aananthram@etsy.com>"]
license = "Apache 2"

[dependencies]
clap = "2.26.0"
rayon = "1.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
float-ord = "0.2.0"
rand = "0.6.5"
rand_xorshift = "0.1.1"
hashbrown = "0.3"
classifier-measures = "0.4.3"
counter = "0.4.3"
es_core = { path = "./evokit-core" }
es_models = { path = "./evokit-models" }
es_data = { path = "./evokit-data"}


[lib]
name = "es"
path = "src/lib.rs"

[[bin]]
name = "evo-example"
doc = false

[[bin]]
name = "evo-rank"
doc = false

[[bin]]
name = "mulberry"
doc = false


[[bin]]
name = "mulberry-test"
doc = false
