[package]
name = "es_core"
version = "0.1.0"
authors = ["Andrew Stanton <refefer@gmail.com>"]
license = "Apache 2"

[dependencies]
rand = "0.6.5"
rayon = "1.0"
serde = "1.0.8"
serde_derive = "1.0.8"
float-ord = "0.2.0"
rand_xorshift = "0.1.1"
hashbrown = "0.3"

[lib]
name = "es_core"
path = "src/lib.rs"
