[package]
name = "es_models"
version = "0.1.0"
authors = ["Andrew Stanton <refefer@gmail.com>"]
edition = "2018"
license = "Apache 2"

[dependencies]
es_core = { path = "../evokit-core" }
es_data = { path = "../evokit-data"}
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
rand = "0.6.5"
rand_xorshift = "0.1.1"
